force-app/main/default/objects/KPI_Catalog__mdt/KPI_Catalog__mdt.object-meta.xml
<CustomObject>
    <description>Catálogo de KPIs con definición formal y frecuencia.</description>
    <label>KPI Catalog</label>
    <nameField>
        <label>KPI Catalog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KPI Catalogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>