force-app/main/default/objects/KPI_Catalog__mdt/fields/Definition_Formula__c.field-meta.xml
<CustomField>
    <fullName>Definition_Formula__c</fullName>
    <label>Definition / Formula</label>
    <length>255</length>
    <type>Text</type>
</CustomField>