force-app/main/default/objects/KPI_Catalog__mdt/fields/KPI_Block__c.field-meta.xml
<CustomField>
    <fullName>KPI_Block__c</fullName>
    <label>KPI Block</label>
    <length>100</length>
    <type>Text</type>
</CustomField>