force-app/main/default/objects/KPI_Catalog__mdt/fields/KPI_Name__c.field-meta.xml
<CustomField>
    <fullName>KPI_Name__c</fullName>
    <label>KPI Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>