force-app/main/default/objects/KPI_Catalog__mdt/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <length>100</length>
    <type>Text</type>
</CustomField>